Bug 514820 - Panel tooltips inappropriately get maximized when using the "Maximized" window placement policy
Summary: Panel tooltips inappropriately get maximized when using the "Maximized" windo...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.5.5
Platform: EndeavourOS Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-19 06:39 UTC by Jesse Nobbe
Modified: 2026-02-10 11:23 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments
Popup with preview in the center taking over the whole screen. (465.24 KB, image/png)
2026-01-19 06:41 UTC, Jesse Nobbe
Details
Popup with description in the center taking over the whole screen. (481.56 KB, image/png)
2026-01-19 06:42 UTC, Jesse Nobbe
Details
Screen flashing when hovering over the Application Menu. (676.51 KB, video/webm)
2026-01-19 06:47 UTC, Jesse Nobbe
Details
Demonstration of triggering and clearing the preview issue. (3.33 MB, video/mp4)
2026-02-01 08:45 UTC, Jesse Nobbe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jesse Nobbe 2026-01-19 06:39:29 UTC
SUMMARY

When hovering over an icon, the preview area will take up the entire screen with the actual preview centered in the popup window. This will happen whether the option, "Show small window previews when hovering over tasks" is checked or not. Additionally (possibly a separate bug) hovering over other elements of the panel will cause the screen to flash repeatedly for example hovering over the Application Menu.


STEPS TO REPRODUCE
1. Add the Icons-Only Task Manager to your panel.
2. Hover over different open windows.

OBSERVED RESULT
A preview area covering the entire screen appears with either a small preview or no preview if the "Show small window previews when hovering over tasks" option is disabled.

EXPECTED RESULT
A small popup over the hovered icon.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: EndeavourOS 
KDE Plasma Version: 6.5.5
KDE Frameworks Version: 6.22.0 
Qt Version: 6.10.1

ADDITIONAL INFORMATION
Kernel: 6.12.66-1-lts (64-bit)
Graphics Platform: Wayland

Other people having the same issue:
* https://redlib.catsarch.com/r/kde/comments/1oz5mcg/why_does_the_thumbnail_preview_cover_the_entire/
* https://redlib.catsarch.com/r/kde/comments/1qbspmj/bug_window_previews_take_up_the_the_entire_screen/
Comment 1 Jesse Nobbe 2026-01-19 06:41:42 UTC
Created attachment 188673 [details]
Popup with preview in the center taking over the whole screen.
Comment 2 Jesse Nobbe 2026-01-19 06:42:17 UTC
Created attachment 188674 [details]
Popup with description in the center taking over the whole screen.
Comment 3 Jesse Nobbe 2026-01-19 06:47:57 UTC
Created attachment 188676 [details]
Screen flashing when hovering over the Application Menu.
Comment 4 Akseli Lahtinen 2026-01-19 12:04:53 UTC
I am unable to repro this on KDE Linux

Operating System: KDE Linux 2026-01-18
KDE Plasma Version: 6.6.80
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.1
Kernel Version: 6.18.5-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15,5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 5 Nate Graham 2026-01-28 23:10:02 UTC
There's a 99% chance you've got a misconfigured window rule. If you have any window rules, disable or delete them and see if it still happens.

If that doesn't help, please try to reproduce the issue in a new clean user account on the same computer, with no changes to default settings.

Thanks!
Comment 6 Jesse Nobbe 2026-01-29 02:09:51 UTC
Thanks for the insight, Nate. I don't have any Window Rules configured on this account. Do you think other Window Management settings could be responsible? I've done a little customization but IIRC this started happening around the time the 6 release happened. My customizations were in place prior to that but, I suppose there could have been a breaking change in regards to something. I have KDE on two other computers with similar configs and haven't had this issue on either one. One of the other computers is the same as this one and haven't had the same issue there. I decided to raise it as a bug though because I did see some other people in the wild were having similar issues.

Changes I've made that may apply:
Desktop Effects
* Touch Points
* Translucency
* Wobbly Windows

KWin Scripts
* Sticky Window Snapping

Also, thanks Akseli for attempting to reproduce. I can't remember for sure if those other cases I saw were also on EndeavourOS but I want to say they were other distros. That leads me to believe it's not specific to EndeavourOS but as Nate said could just be that we all have something misconfigured in the same way.

I should also add that this doesn't happen consistently. I hadn't had the large preview problem for several days and then earlier today it happened again. The flashing has been happening pretty consistently however.
Comment 7 Nate Graham 2026-01-30 16:47:03 UTC
Hmm, if it's not a window rule, then this is going to be a weird one.

On the affected computer, does the issue reproduce in a new clean user account with no changes to default settings?
Comment 8 Jesse Nobbe 2026-01-31 08:01:29 UTC
No it does not replicate in a fresh user profile with no settings changed. I tested for a few minutes so there's no saying whether the issue would present itself later.
Comment 9 Nate Graham 2026-01-31 15:06:15 UTC
Cool; that means some change or customization in your normal user account is triggering this.

We'll need to know what it is to be able to identify whether there's a bug in any KDE code or not. Please go through https://community.kde.org/Troubleshooting and try to find what the precise trigger is.

Thanks!
Comment 10 Jesse Nobbe 2026-02-01 08:45:54 UTC
Created attachment 189126 [details]
Demonstration of triggering and clearing the preview issue.

Hi all,

I think I figured out how to reproduce the issue (on my machine at least). When I put my mouse over the right part of the panel (it's the Margins Separator in this example) there is flashing and the window previews are affected. Then, I'm able to clear the issue by mousing out and back into the panel. I've also been able to trigger the issue by hovering near the Application Menu widget (that's why I start out over there at the beginning of the video). While there is flashing on that side it didn't cause the app preview issue this time around from that side of the panel.

I also had journalctl -f running in the background but alas no logs show there as I'm able to trigger the issue. I also tried dmesg -w when triggering the issue to no avail. Maybe there's somewhere else I can be looking for feedback when this occurs?
Comment 11 Nate Graham 2026-02-04 18:39:44 UTC
Thanks, that's helpful!

Still, when I try to replicate exactly what you're doing with a default panel, I can't get anything bad to happen.

If you create a new default panel (right click desktop > enter edit mode > add panel > default panel) can you get it to happen there?
Comment 12 Nate Graham 2026-02-04 19:28:26 UTC
Tobias fella figured it out! It's the "Maximized" window placement mode. I'm guessing you're using that, right?

With that setting in use, I can reproduce the issue without even any margins separators.
Comment 13 Jesse Nobbe 2026-02-04 19:37:52 UTC
I did have that set. However, when changing to another value I can still get the preview to show full size. Maybe I need a restart after applying the new setting. I tried Minimal Overlapping and Centered.
Comment 14 Nate Graham 2026-02-04 19:43:13 UTC
You have to restart plasmashell (or the computer) after changing it. Then the issue should go away.
Comment 15 Jesse Nobbe 2026-02-04 20:31:29 UTC
OK, I've done a restart and haven't seen anything yet.

So, question for you guys. Do you think this rises to the level of a bug? My preference is that I really do like having windows be maximized. It's not the end of the world to have to go with another option but from my perspective the previews would behave differently from first-class windows.

Regardless, I really appreciate you helping me troubleshoot and track this down. And, I'm happy I got to contribute in some way to KDE!
Comment 16 Nate Graham 2026-02-04 21:01:11 UTC
It's definitely a bug; these tooltips aren't supposed to be respecting the window placement setting. They're only "windows" in the technical sense of the term, not the user sense of the term.
Comment 17 Jesse Nobbe 2026-02-04 21:02:40 UTC
Alright, I'll keep an eye on this space then. Let me know if there's anything else I can do to help from here on out.
Comment 18 Bug Janitor Service 2026-02-05 09:06:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8749
Comment 19 Tobias Fella 2026-02-05 12:17:46 UTC
Git commit 6c667b3fc26fb3b2ac54d89fe2f109fe2f9e5b55 by Tobias Fella, on behalf of Tobias Fella.
Committed on 05/02/2026 at 09:06.
Pushed by tfella into branch 'master'.

Mark Tooltips as Special Windows

To prevent the window previews in the panel from being maximized when using the "Maximizing" window policy

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/-/commit/6c667b3fc26fb3b2ac54d89fe2f109fe2f9e5b55
Comment 20 Vlad Zahorodnii 2026-02-10 11:23:57 UTC
Git commit def206aa83aaad1da788e6c2c85abfbae597fa85 by Vlad Zahorodnii, on behalf of Tobias Fella.
Committed on 10/02/2026 at 10:25.
Pushed by vladz into branch 'Plasma/6.6'.

Mark Tooltips as Special Windows

To prevent the window previews in the panel from being maximized when using the "Maximizing" window policy
(cherry picked from commit 6c667b3fc26fb3b2ac54d89fe2f109fe2f9e5b55)

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/-/commit/def206aa83aaad1da788e6c2c85abfbae597fa85