Mark Tooltips as Special Windows

To prevent the window previews in the panel from being maximized when using the "Maximizing" window policy

BUG: 514820
(cherry picked from commit 6c667b3fc26fb3b2ac54d89fe2f109fe2f9e5b55)