src/window.cpp
@@ -687,7 +687,7 @@ void Window::takeFocus()
 bool Window::isSpecialWindow() const
 {
     // TODO
-    return isDesktop() || isDock() || isSplash() || isToolbar() || isNotification() || isOnScreenDisplay() || isCriticalNotification() || isAppletPopup();
+    return isDesktop() || isDock() || isSplash() || isToolbar() || isNotification() || isOnScreenDisplay() || isCriticalNotification() || isAppletPopup() || isTooltip();
 }
 
 void Window::demandAttention(bool set)
